# queryscope

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  queryscope_prd.md
catalog/: admin.py  apps.py  factories.py  managers.py  models.py  serializers.py  signals.py  urls.py
catalog/management/commands/: seed_db.py
catalog/migrations/: 0001_initial.py
catalog/services/: __init__.py  analytics.py  books.py  search.py
catalog/views/: __init__.py  analytics.py  books.py  bulk.py  compare.py  search.py
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: base.html  index.html
dashboard/templates/dashboard/partials/: analytics_block.html  compare.html  metrics_block.html  profiler_metrics.html
profiler/: middleware.py  utils.py
queryscope/: asgi.py  urls.py  wsgi.py
queryscope/settings/: __init__.py  base.py  dev.py
